@@ -4,6 +4,8 @@ Log:
 
 - 11/07/2006, version 0.1.3: roms
 	- requires TiglUbs.dll version 3.6 due to Win98/Me/2k fix
+	- added function to detect whether USB support is available
+		(suggestion of FTP 83+ <webmaster@ftp83plus.net>).
 
 - 02/07/2006, version 0.1.2: roms
 	- fixed DirectLink issue under Linux (TI84+ only)
